unpackaged/main/default/objects/Tags__c/Tags__c.object-meta.xml
<CustomObject>
    <description>Brand, Brand Quality, and Territory hierarchy data table.</description>
    <label>Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>