unpackaged/main/default/objects/Tags__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Dictates whether the Tag is active and should be a value that can be selected</description>
    <inlineHelpText>Is the Tag Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>