unpackaged/main/default/objects/Tags__c/fields/BQSS__c.field-meta.xml
<CustomField>
    <fullName>BQSS__c</fullName>
    <label>BQSS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>