unpackaged/main/default/objects/Tags__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>URL to the logo which is stored on the Documents folder called Program Calendar Images - Public Shared</description>
    <inlineHelpText>URL to the logo which is stored on the Documents folder called Program Calendar Images - Public Shared</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>