unpackaged/main/default/objects/Tags__c/fields/PL4_Brand__c.field-meta.xml
<CustomField>
    <fullName>PL4_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PL4 Brand</label>
    <referenceTo>Tags__c</referenceTo>
    <relationshipLabel>Tags (sales360 Brand)</relationshipLabel>
    <relationshipName>BIBrands</relationshipName>
    <type>Lookup</type>
</CustomField>