unpackaged/main/default/objects/Tags__c/fields/WBSCodeSegment__c.field-meta.xml
<CustomField>
    <fullName>WBSCodeSegment__c</fullName>
    <label>WBS Code Segment</label>
    <length>6</length>
    <type>Text</type>
</CustomField>