unpackaged/main/default/objects/Tags__c/recordTypes/PL4Brand.recordType-meta.xml
<RecordType>
    <fullName>PL4Brand</fullName>
    <active>true</active>
    <label>PL4 Brand</label>
</RecordType>