unpackaged/main/default/objects/Tags__c/recordTypes/Territory.recordType-meta.xml
<RecordType>
    <fullName>Territory</fullName>
    <active>true</active>
    <description>Territory Record Type.</description>
    <label>Territory</label>
</RecordType>