unpackaged/main/default/objects/Tags__c/validationRules/WBS_Segment_Length_Territory.validationRule-meta.xml
<ValidationRule>
    <fullName>WBS_Segment_Length_Territory</fullName>
    <active>true</active>
    <description>Enforces field length requirements for the WBS Segment on the Territory record type.</description>
    <errorConditionFormula>IF(ISBLANK(WBSCodeSegment__c), false, AND(RecordType.DeveloperName='Territory', LEN(WBSCodeSegment__c)!=6))</errorConditionFormula>
    <errorMessage>A Territory's WBS Code Segment must be exactly six characters long.</errorMessage>
</ValidationRule>