unpackaged/main/default/objects/Tags__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IOCodeSegment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>