unpackaged/main/default/objects/Tags__c/listViews/BrandVariety.listView-meta.xml
<ListView>
    <fullName>BrandVariety</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>External_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tags__c.BrandVariety</value>
    </filters>
    <label>Brand Variety</label>
</ListView>