unpackaged/main/default/objects/Tags__c/listViews/PL4_Brand.listView-meta.xml
<ListView>
    <fullName>PL4_Brand</fullName>
    <columns>NAME</columns>
    <columns>WBSCodeSegment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PL4_Brand__c</columns>
    <columns>IOCodeSegment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tags__c.PL4Brand</value>
    </filters>
    <label>PL4 Brand</label>
    <language>en_US</language>
</ListView>