unpackaged/main/default/objects/Tags__c/listViews/Territory_Tag.listView-meta.xml
<ListView>
    <fullName>Territory_Tag</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>WBSCodeSegment__c</columns>
    <columns>PL4_Brand__c</columns>
    <columns>IOCodeSegment__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tags__c.Territory</value>
    </filters>
    <label>Territory</label>
    <language>en_US</language>
</ListView>